# trackerhelper

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.ru.md  dedupe.py  dr.ps1  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA_FLOW.md
examples/: README.md
tests/: helpers.py  test_cli_stats_output.py  test_dataset_clams_casino.py  test_dedupe_formatting.py  test_dedupe_plan.py  test_ffprobe_utils.py  test_normalize.py  test_normalize_sampling.py  test_release_missing_report.py  test_stats_formatting.py  test_tags.py
tests/fixtures/: clams_casino_dataset.json
trackerhelper/: __init__.py  bbcode.py  cli.py  cli_args.py  constants.py  cover.py  dedupe.py  dedupe_fingerprint.py  dedupe_logic.py  dedupe_models.py  dedupe_reporting.py  dedupe_scan.py  dr_utils.py  ffprobe_utils.py  models.py  normalize.py  stats.py  synthetic_dataset.py  tags.py  tracklist.py  utils.py
trackerhelper/commands/: __init__.py  common.py  dedupe.py  normalize.py  release.py  stats.py
trackerhelper/core/: __init__.py  models.py  normalize.py  stats.py  tags.py  utils.py
trackerhelper/formatting/: bbcode.py  bbcode_templates.py
trackerhelper/io/: __init__.py  ffprobe_utils.py  scan.py
