[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trackerhelper"
version = "0.2.3"
description = "Utilities for music discography folders (stats, BBCode, normalize)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "pryid" }]
keywords = ["audio", "bbcode", "chromaprint", "discography", "ffprobe", "music"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: BSD Zero Clause License (0BSD)",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pryid/trackerhelper"
Issues = "https://github.com/pryid/trackerhelper/issues"

[project.optional-dependencies]
cover = ["requests"]

[project.scripts]
trackerhelper = "trackerhelper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trackerhelper*"]
